Create menu and styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -37,7 +38,8 @@
             <span class="icon-bar"></span>
 
           </button>
-          <a class="brand" href="#">Bootstrap</a>
+          <a class="logo pull-left"><img src="http://khmerenterprises.com/sites/default/files/title_0.png" alt="Home"></a>
+          
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li> 
@@ -45,9 +47,6 @@
               <li><a href="#">Service</a></li> 
               <li><a href="#">Contact Us</a></li> 
             </ul>
-
-
-            
             <form class="navbar-form pull-right">
               <input type="text" class="span2" placeholder="Email">
               <input type="text" class="span2" placeholder="Password">  
@@ -55,6 +54,20 @@
             </form>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="container main">
+      <div class="row-fluid">
+        <div class="span5">
+          <iframe allowfullscreen="" frameborder="0" height="281" mozallowfullscreen="" src="http://player.vimeo.com/video/64892818" webkitallowfullscreen="" width="100%"></iframe>
+        </div>
+        <div class="span7">
+          <img src="img/001.png" id="imghead">
+       </div>
+      </div>
+      <div class="rown-fluid">
+          <span class="pull-left">Start Up</span>
+          <div class=""
       </div>
     </div>
 
