--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE>
 <html>
   <head>
-    <meta charset="utf-8">
+   <meta charset="utf-8">
     <title>Bootstrap for Beginner</title>
+ 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -17,7 +19,6 @@
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
@@ -38,7 +39,7 @@
             <span class="icon-bar"></span>
 
           </button>
-          <a class="logo pull-left"><img src="http://khmerenterprises.com/sites/default/files/title_0.png" alt="Home"></a>
+          <a class="logo pull-left"><img src="img/ke.png" alt="Home"></a>
           
           <div class="nav-collapse collapse">
             <ul class="nav">
